<resources>
    <string name="app_name">LoginLinearLayout</string>
    <string name="sign_in">Sign In</string>
    <string name="name_or_email">User Name/e-mail address</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>
</resources>
