<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/lly_login_padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.usuario.loginlinearlayout.SplashActivity"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txvSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/txv_sign_in_margin"
        android:text="@string/sign_in"
        android:textAppearance="@android:style/TextAppearance.Holo.Medium.Inverse"
        />

    <TextView
        android:id="@+id/txvUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_or_email"
        android:textColor="@android:color/white"
        android:textAppearance="@android:style/TextAppearance.Holo.Small.Inverse"
        />

    <EditText
        android:id="@+id/edtUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:inputType="text"
        android:textAppearance="@android:style/TextAppearance.Holo.Large"
        android:layout_marginBottom="@dimen/txv_user_margin"
        />

    <TextView
        android:id="@+id/txvPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textAppearance="@android:style/TextAppearance.Holo.Small.Inverse"
        />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:inputType="textPassword"
        android:textAppearance="@android:style/TextAppearance.Holo.Large"

        />

    <LinearLayout
        android:id="@+id/llSignUpOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chkRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:checked="true"
            android:layout_weight="1"
            android:textAppearance="@android:style/TextAppearance.Holo"
            />

        <TextView
            android:id="@+id/txvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textAppearance="@android:style/TextAppearance.Holo.Small.Inverse"
            />

    </LinearLayout>

    <Button
        android:layout_gravity="center_horizontal"
        android:id="@+id/btnSignUp"
        android:layout_width="@dimen/sign_in_button_width"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:background="@color/colorFacebook"
        android:textAllCaps="false"
        android:textAppearance="@android:style/TextAppearance.Holo.Small.Inverse"
        android:layout_marginBottom="@dimen/txv_sign_up_margin"
    />

    <Button
        android:id="@+id/btnGoogleSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_with_google"
        android:background="@drawable/google_bar"
        android:textAllCaps="false"
        android:textAppearance="@android:style/TextAppearance.Holo.Small.Inverse"
        android:layout_marginBottom="@dimen/txv_google_margin"
        />

    <Button
        android:id="@+id/btnFacebookSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_with_facebook"
        android:background="@drawable/facebook_bar"
        android:textAllCaps="false"
        android:textAppearance="@android:style/TextAppearance.Holo.Small.Inverse"
        />

</LinearLayout>
